--- a/src/assets/scss/style.css
+++ b/src/assets/scss/style.css
@@ -1,1 +1,287 @@
-/*# sourceMappingURL=style.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url(https://unpkg.com/bootstrap@4.5.2/dist/css/bootstrap.min.css);
+:root {
+  --shimmer-color: #ddd;
+}
+
+* {
+  font-family: "Poppins", sans-serif;
+}
+
+body {
+  background: linear-gradient(to right, #FFF6F3, #E8F3FA);
+  overflow-x: hidden;
+}
+
+.main-layout {
+  display: flex;
+  width: 100%;
+}
+.main-layout .side_component {
+  position: relative;
+}
+.main-layout .side_component .side_btn {
+  position: absolute;
+  top: 51px;
+  right: -14px;
+  background-color: #fff;
+  font-size: 12px;
+  padding: 0;
+  color: #52667B;
+  font-weight: 600;
+  box-shadow: 3px 0px 15px rgba(156, 156, 156, 0.1);
+  border: none;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+}
+.main-layout .side_component .side_btn:active, .main-layout .side_component .side_btn:focus, .main-layout .side_component .side_btn:focus-visible {
+  background-color: #fff !important;
+  color: #52667B !important;
+  box-shadow: 3px 0px 15px rgba(156, 156, 156, 0.1) !important;
+  border: none;
+}
+.main-layout .component-layout {
+  width: 100%;
+}
+
+.sidebar {
+  background: rgba(255, 255, 255, 0.7);
+  box-shadow: 3px 0px 15px rgba(156, 156, 156, 0.1);
+  border-radius: 0px 15px 15px 0px;
+  padding: 20px 0;
+  inline-size: 270px;
+}
+.sidebar .sidenavigation {
+  padding: 0 !important;
+}
+.sidebar .company_logo {
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+}
+.sidebar .small_company_logo {
+  display: none;
+}
+.sidebar .profile_pic {
+  display: flex;
+  justify-content: center;
+  margin-top: 45px;
+}
+.sidebar .profile_pic .avatar_1 {
+  width: 80px;
+  height: 80px;
+}
+.sidebar .profile_pic .avatar_2 {
+  width: 80px;
+  height: 80px;
+  margin-left: -25px;
+}
+.sidebar .side_data_component {
+  background: rgba(216, 216, 216, 0.15);
+  display: flex;
+  margin: 0 auto;
+  margin: 50px 10px 10px 10px;
+  border-radius: 15px;
+}
+.sidebar .side_data_component .side_ul {
+  list-style: none;
+  font-size: 14px;
+  font-weight: 500;
+  padding: 8px;
+  margin: 0;
+  width: 100%;
+}
+.sidebar .side_data_component .side_ul .side_li {
+  padding: 10px;
+}
+.sidebar .side_data_component .side_ul .side_li a {
+  color: #b9b9b9;
+  text-decoration: none;
+}
+.sidebar .side_data_component .side_ul .side_li .side_menu_icon {
+  height: 25px;
+  width: 25px;
+  margin-right: 15px;
+  filter: brightness(0) invert(0.75);
+}
+.sidebar .side_data_component .side_ul .side_li:hover {
+  background-color: #ffffff;
+  border-radius: 15px;
+}
+.sidebar .side_data_component .side_ul .side_li:hover a {
+  color: #3A70B4;
+}
+.sidebar .side_data_component .side_ul .side_li:hover .side_menu_icon {
+  filter: none;
+}
+.sidebar .side_data_component.side_data_component_1 {
+  margin: 30px 10px 10px 10px;
+}
+.sidebar .side_footer {
+  background: rgba(216, 216, 216, 0.15);
+  display: flex;
+  margin: 120px 10px 10px 10px;
+  border-radius: 15px;
+}
+.sidebar .side_footer .side_footer_ul {
+  list-style: none;
+  font-weight: 500;
+  font-size: 14px;
+  padding: 8px;
+  margin: 0;
+  width: 100%;
+}
+.sidebar .side_footer .side_footer_ul .side_footer_li {
+  padding: 10px;
+}
+.sidebar .side_footer .side_footer_ul .side_footer_li a {
+  color: #948f8f;
+  text-decoration: none;
+}
+.sidebar .side_footer .side_footer_ul .side_footer_li .side_menu_icon {
+  height: 25px;
+  width: 25px;
+  margin-right: 15px;
+  filter: brightness(0) invert(0.75);
+}
+.sidebar .side_footer .side_footer_ul .side_footer_li:hover {
+  background-color: #ffffff;
+  border-radius: 15px;
+}
+.sidebar .side_footer .side_footer_ul .side_footer_li:hover a {
+  color: #3A70B4;
+}
+.sidebar .side_footer .side_footer_ul .side_footer_li:hover .side_menu_icon {
+  filter: none;
+}
+
+.active .sidebar {
+  inline-size: 80px;
+  background: rgba(255, 255, 255, 0.7);
+  box-shadow: 3px 0px 15px rgba(156, 156, 156, 0.1);
+  border-radius: 0px 15px 15px 0px;
+  padding: 20px 0;
+}
+.active .sidebar .sidenavigation {
+  padding: 0 !important;
+}
+.active .sidebar .company_logo {
+  display: none;
+}
+.active .sidebar .small_company_logo {
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+}
+.active .sidebar .profile_pic {
+  display: flex;
+  justify-content: center;
+  margin-top: 45px;
+}
+.active .sidebar .profile_pic .avatar_1 {
+  width: 40px;
+  height: 40px;
+}
+.active .sidebar .profile_pic .avatar_2 {
+  display: none;
+}
+.active .sidebar .side_data_component {
+  background: rgba(216, 216, 216, 0.15);
+  display: flex;
+  margin: 0 auto;
+  margin: 50px 10px 10px 10px;
+  border-radius: 15px;
+}
+.active .sidebar .side_data_component .side_ul {
+  list-style: none;
+  font-size: 14px;
+  font-weight: 500;
+  padding: 8px;
+  margin: 0;
+  width: 100%;
+}
+.active .sidebar .side_data_component .side_ul .side_li {
+  padding: 10px;
+}
+.active .sidebar .side_data_component .side_ul .side_li a {
+  display: none;
+}
+.active .sidebar .side_data_component .side_ul .side_li .side_menu_icon {
+  height: 25px;
+  width: 25px;
+  margin-right: 15px;
+  filter: brightness(0) invert(0.75);
+}
+.active .sidebar .side_data_component .side_ul .side_li:hover {
+  background-color: #ffffff;
+  border-radius: 15px;
+}
+.active .sidebar .side_data_component .side_ul .side_li:hover a {
+  color: #3A70B4;
+}
+.active .sidebar .side_data_component .side_ul .side_li:hover .side_menu_icon {
+  filter: none;
+}
+.active .sidebar .side_data_component.side_data_component_1 {
+  margin: 30px 10px 10px 10px;
+}
+.active .sidebar .side_footer {
+  background: rgba(216, 216, 216, 0.15);
+  display: flex;
+  margin: 120px 10px 10px 10px;
+  border-radius: 15px;
+}
+.active .sidebar .side_footer .side_footer_ul {
+  list-style: none;
+  font-weight: 500;
+  font-size: 14px;
+  padding: 8px;
+  margin: 0;
+  width: 100%;
+}
+.active .sidebar .side_footer .side_footer_ul .side_footer_li {
+  padding: 10px;
+}
+.active .sidebar .side_footer .side_footer_ul .side_footer_li a {
+  display: none;
+}
+.active .sidebar .side_footer .side_footer_ul .side_footer_li .side_menu_icon {
+  height: 25px;
+  width: 25px;
+  margin-right: 15px;
+  filter: brightness(0) invert(0.75);
+}
+.active .sidebar .side_footer .side_footer_ul .side_footer_li:hover {
+  background-color: #ffffff;
+  border-radius: 15px;
+}
+.active .sidebar .side_footer .side_footer_ul .side_footer_li:hover a {
+  color: #3A70B4;
+}
+.active .sidebar .side_footer .side_footer_ul .side_footer_li:hover .side_menu_icon {
+  filter: none;
+}
+
+.lip_network {
+  padding: 30px;
+  width: 100%;
+}
+.lip_network .lip_heading {
+  margin-bottom: 16px;
+}
+.lip_network .lip_heading .l_h_h2 {
+  color: #3A70B4;
+  font-size: 30px;
+  font-weight: 600;
+}
+.lip_network .lip_heading .l_h_h2 span {
+  font-size: 22px;
+  font-weight: 600;
+}
+.lip_network .lip_network_tab {
+  background-color: rgba(255, 255, 255, 0.4);
+  padding: 0px 30px;
+  font-size: 12px;
+  font-weight: 500;
+}/*# sourceMappingURL=style.css.map */
