implement : network tab componenet

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -8,6 +8,58 @@ body{
     background: linear-gradient(to right, $bodybg, $bodybg1);
     overflow-x: hidden;
 }
+.round_btn{
+    width: 34px;
+    height: 34px;
+    border-radius: 50%;
+    background-color: $white;
+    border: none;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.08); 
+    &:active{
+        background-color: $white !important;
+        border: none;
+        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.08) !important; 
+    }
+    &:hover{
+        background-color: $white !important;
+        border: none;
+        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.08); 
+    }
+    &:focus{
+        box-shadow: none;
+    }
+}
+.cancel_btn{
+    background-color: $white;
+    color: $secondary;
+    border: 1px solid $secondary;
+    padding: 8px 30px;
+    min-height: 40px;
+    border-radius: 15px;
+    font-size: 14px;
+    font-weight: $fw500;
+    &:hover{
+        background-color: $white;
+        color: $secondary;
+        border: 1px solid $secondary;
+    }
+}
+.save_btn{
+    background-color: $secondary;
+    color: $white;
+    border: 1px solid $secondary;
+    padding: 8px 30px;
+    min-height: 40px;
+    border-radius: 15px;
+    font-size: 14px;
+    font-weight: $fw500;
+    &:hover{
+        background-color: $secondary;
+        color: $white;
+        border: 1px solid $secondary;
+    }
+}
+//main layout
 .main-layout{
  display: flex;
  width: 100%;
@@ -28,6 +80,8 @@ body{
         border-radius: 50%;
         width: 30px;
         height: 30px;
+        transform: rotate(180deg);
+        transition: 0.3s ease-in-out;
         &:active , &:focus , &:focus-visible{
             background-color: #fff !important;
             color: $darkgray !important;
@@ -38,12 +92,26 @@ body{
 }
 .component-layout{
     width: 100%;
+    @include xll {
+      z-index: inherit;
+      width: 100%;
+      padding-left: 20px;
+    }
+}
+&.active{
+    .side_component{
+        // width: 0;
+        .side_btn{
+            // left: 0;
+            transform: rotate(0deg);
+        }
+    }
 }
 }
-
 //full sidebar css
     .sidebar{
         background: rgba(255, 255, 255, 0.7);
+        transition: 0.3s ease-in-out;
         box-shadow: 3px 0px 15px rgba(156, 156, 156, 0.1);
         border-radius: 0px 15px 15px 0px;
         padding: 20px 0;
@@ -150,6 +218,9 @@ body{
                     }
                 }
             }
+        }
+        @include xll {
+            transform: translateX(0px);
         }
     }
 //small side bar
@@ -260,9 +331,12 @@ body{
                 }
             }
         }
+        @include xll {
+            transform: translateX(-80px);
+        }
     }
 }
-
+//lip network page
 .lip_network{
     padding: 30px;
     width: 100%;
@@ -279,9 +353,286 @@ body{
         }
     }
     .lip_network_tab{
-        background-color: #FFFFFF66;
-        padding: 0px 30px;
         font-size: 12px;
         font-weight: 500;
+        color: $darkgray;
+       
+        .nav-tabs{
+            border: none;
+            background-color: #FFFFFF66;
+            border-radius: 15px;
+            .nav-item{
+                padding: 8px;
+                .nav-link {
+                    color:#52667b80;
+                    border: none;
+                    &:hover{
+                        border-color: transparent;
+                    } 
+                }
+                .nav-link.active {
+                    color: $primary;
+                    background-color: transparent;
+                    border: none;
+                    .tab_icon{
+                        filter:none;
+                    }
+                }
+            }
+        }
+        .tab_icon{
+            width: 20px;
+            height: 20px;
+            margin-right: 6px;
+            filter: brightness(0) invert(0.75);
+          
+        }
+    }
+    @include sm{
+        padding: 12px;
+    }
+}
+//lip network (network) component
+.network{
+    background: rgba(255, 255, 255, 0.3);
+    padding: 28px 30px;
+    border-radius: 15px;
+    .top-data{
+        display: flex;
+        flex-wrap: wrap;
+        .network-input{
+            max-width: 435px;
+            border: none;
+            border-radius: 15px;
+            min-height: 45px;
+            background-color: #fff;
+            font-size: 13px;
+            font-weight: $fw500;
+            &::placeholder{
+                font-size: 12px;
+                font-weight: $fw600;
+                color: #52667b80;
+            }
+            &:active , &:focus{
+                box-shadow: none;
+            }
+        }
+        .top-btns{
+            margin-left: 14px;
+            .top_net_btn{
+                background-color: $primary;
+                color: $white;
+                font-size: 12px;
+                font-weight: $fw600;
+                border: none;
+                border-radius: 15px;
+                min-height: 45px;
+                margin-left: 15px;
+                &:active , &:focus{
+                    background-color: $primary;
+                    color: $white;
+                    border: none;
+                    box-shadow: none !important;
+                }  
+            }
+            @include sm{
+                margin-left: 5px;
+                .top_net_btn{
+                    min-height: 35px;
+                    margin-left: 7px;
+                }
+            }
+        }
+        .top_filter_btn{
+            background-color: rgba(216, 216, 216, 0.15);
+            color: $darkgray;
+            min-height: 45px;
+            min-width: 100px;
+            border-radius: 15px;
+            border: 1px solid #fff;
+            font-size: 10px;
+            font-weight: $fw500;
+            text-align: left;
+            margin-left: 15px;
+            position: relative;
+            &::after {
+                content: '';
+                background-image: url(@/assets/images/icons/down1.svg);
+                background-repeat: no-repeat;
+                background-size: 12px;
+                height: 12px;
+                width: 12px;
+                top: 0;
+                bottom: 0;
+                right: 20px;
+                margin: auto;
+                position: absolute;
+            }
+            &:active , &:focus{
+                color: $darkgray;
+                background-color: rgba(216, 216, 216, 0.15);
+                border: 1px solid white;
+                box-shadow: none !important;
+            }
+            @include sm{
+                min-height: 35px;
+                margin-left: 5px;
+            }
+        }
+    }
+
+    .Representatives_data{
+        background: linear-gradient(190.57deg, rgba(255, 255, 255, 0.5) 19.25%, rgba(248, 248, 255, 0.6) 54.39%, rgba(255, 255, 255, 0.7) 90.02%);
+        border-radius: 20px;
+        padding: 27px 30px;
+        margin-top: 20px;
+        .Representatives_title{
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            align-items: center;
+            h5{
+                color: #52667B80;
+                font-size: 14px;
+                font-weight: $fw700;
+            }
+            .viewdata{
+                color: $primary;
+                font-size: 12px;
+                font-weight: $fw600;
+                padding-right: 8px;
+                margin: 0;
+            }
+            .show_data_btn{
+                background-color: $primary;
+                color: $white;
+                border: none;
+                width: 34px;
+                font-size: 14px;
+                height: 34px;
+                border-radius: 50%;
+                padding: 7px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                &:focus{
+                    box-shadow: none;
+                }
+            }
+        }
+        @include sm{
+            padding: 10px;
+        }
+    }
+    @include sm{
+        padding: 10px;
+    }
+}
+//network data card
+.network_data_card{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: start;
+   
+    .Representatives_card{
+        max-width: 245px;
+        margin: 10px;
+        width: 245px;
+        border: none;
+        border-radius: 20px;
+        background: linear-gradient(190.57deg, rgba(255, 255, 255, 0.336) 19.25%, rgba(255, 255, 255, 0.6) 54.39%, rgba(255, 255, 255, 0.354) 90.02%);
+        box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.12); 
+        .company_img{
+            display: flex;
+            justify-content: space-between;
+            .card_logo_img{
+                width: 85px;
+                height: 85px;
+                border-radius: 50%;
+            }
+            .round_btn{
+                margin-left: 5px;
+            }  
+        } 
+        .Represent_title{
+            margin-top: 11px;
+           h5{
+            color: #326FB3;
+            font-size: 14px;
+            font-weight: 600px;
+           }
+        } 
+        .company_detail{
+            margin-top: 20px;
+            .com_detail_p{
+                color: $darkgray;
+                font-size: 10px;
+                font-weight: $fw500;
+                margin: 0;
+                padding: 3px 8px;
+                span{
+                    color: #52667B80;
+                }
+            }
+            .badge_tab{
+                display: flex;
+                align-items: center;
+                background-color: #2BB59633;  
+                width: 17px;
+                height: 17px; 
+                color: $darkgray; 
+            }
+        }
+    }
+}
+#network-modal{
+    &.modal{
+        .modal-content{
+            border-radius: 15px;
+            border: none;
+            padding: 15px;
+            .modal-body{
+                .change-contact{
+                    h5{
+                        color: $primary;
+                        font-size: 20px;
+                        font-weight: $fw600;
+                    }
+                    .contact-select{
+                        border: none;
+                        background-color: $white;
+                        min-height: 40px;
+                        margin-top: 20px;
+                        margin-bottom: 7px;
+                        &.v-select{
+                            .vs__dropdown-toggle{
+                                border: none;
+                                box-shadow: 3px 0px 15px rgba(156, 156, 156, 0.3);
+                                border-radius: 10px;
+                                padding: 8px;
+                            }
+                            .vs__dropdown-menu{
+                                border: none;
+                                border-radius: 10px;
+                                font-size: 12px;
+                                font-weight: $fw500;
+                                color: $darkgray;
+                            }
+                        }
+                    }
+                    span{
+                        color: #52667B80;
+                        font-size: 12px;
+                        font-weight: $fw500;
+                        margin-top: 5px;
+                    }
+                    .cancel_save_btn{
+                        display: flex;
+                        justify-content: center;
+                        margin-top: 40px;
+                    }
+                }
+            }
+        }
     }
 }
